# Pokemon_combat

./: README.md
Documentacion/html/: annotated.html  annotated_dup.js  classes.html  classmove__database-members.html  classmove__database.html  classmove__database.js  classmove__struct-members.html  classmove__struct.html  classpokemon-members.html  classpokemon.html  classpokemon.js  classpokemon__battle-members.html  classpokemon__battle.html  classpokemon__battle.js  classpokemon__database-members.html  classpokemon__database.html  classpokemon__database.js  classtrainers__database-members.html  classtrainers__database.html  classtrainers__struct-members.html  classtrainers__struct.html  external__functions_8h_source.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  index.html  move__database_8h_source.html  move__struct_8h_source.html  navtreedata.js  navtreeindex0.js  pokemon_8h_source.html  pokemon__battle_8h_source.html  pokemon__database_8h_source.html  trainers__database_8h_source.html  trainers__struct_8h_source.html
Documentacion/latex/: annotated.tex  classmove__database.tex  classmove__struct.tex  classpokemon.tex  classpokemon__battle.tex  files.tex  (+12 more)
Pokemon/: external_functions.cpp  mainUML.puml  move_database.cpp  pokemon.cpp  pokemon.h  pokemon_database.cpp  pokemon_database.h  trainers_database.cpp  trainers_database.h  trainers_struct.h
Project/: CMakeLists.txt  external_functions.h  main.cpp  move_database.h  move_struct.cpp  move_struct.h  pokemon_battle.cpp  pokemon_battle.h  trainers_struct.cpp
(+12 files in other folders)
